move statics in own folder

--- a/A_Christmas_Carol.html
+++ b/A_Christmas_Carol.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/46" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/A_Christmas_Carol" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -3223,6 +3223,6 @@ be truly said of us, and all of us! And so, as Tiny Tim
 observed, God bless Us, Every One!</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
