--- a/Biene_Maja.html
+++ b/Biene_Maja.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/21021" title="Originalquelle" />
     <link rel="dc.description"   href="http://de.wikipedia.org/wiki/Die_Biene_Maja" title="Details bei der Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -4025,6 +4025,6 @@ die ihr gerne lauschten, die Geschichten, die wir mit ihr erlebt
 haben.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
