--- a/Frankenstein.html
+++ b/Frankenstein.html
@@ -23,7 +23,7 @@
   <link rel="dc.source"        href="http://www.gutenberg.org/etext/84" title="Original Source" />
   <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Frankenstein" title="Details on Wikipedia" />
   <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-  <link rel="stylesheet"       href="ebook.css" />
+  <link rel="stylesheet"       href="static/ebook.css" />
   <link rel="start"            href="/" title="Start" />
   <link rel="index"            href="/ebooks/" title="Index" />
   <link rel="up"               href="/ebooks/" />
@@ -6589,6 +6589,6 @@ which lay close to the vessel. He was soon borne away by the waves and
 lost in darkness and distance.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
