--- a/Moby-Dick.html
+++ b/Moby-Dick.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/2701" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Moby-Dick" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
