--- a/Nils_Holgersson.html
+++ b/Nils_Holgersson.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/31114" title="Originalquelle" />
     <link rel="dc.description"   href="http://de.wikipedia.org/wiki/Die_wunderbare_Reise_des_kleinen_Nils_Holgersson_mit_den_Wildgänsen" title="Details bei der Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -19321,6 +19321,6 @@ er sich gewünscht, wieder der Däumling zu sein, um mit einer Schar Wildgänse
 </figure>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
