--- a/Dracula.html
+++ b/Dracula.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/345" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Dracula" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -13637,6 +13637,6 @@ some men so loved her, that they did dare much for her sake.”</p>
 <p class="signature">Jonathan Harker</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
