--- a/Robinson_Crusoe.html
+++ b/Robinson_Crusoe.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/521" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Robinson_Crusoe" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -10615,6 +10615,6 @@ new adventures of my own, for ten years more, I shall give a
 farther account of in the Second Part of my Story.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
