--- a/The_Jungle_Book.html
+++ b/The_Jungle_Book.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/236" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Jungle_Book" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="static/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -4580,6 +4580,6 @@ March and suffer day by day.
 </blockquote>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="static/ebook.js"></script>
 </body>
 </html>
