correct validation errors, all now well-formed XML

--- a/404.html
+++ b/404.html
@@ -1,2 +1,10 @@
-<meta http-equiv="refresh" content="0; url=/">
-<script type="text/javascript">window.location.pathname="/?f=404"</script>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=/" />
+    <script type="text/javascript">window.location.pathname="/?f=404"</script>
+    <title></title>
+  </head>
+  <body>
+  </body>
+</html>
