--- a/Biene_Maja.html
+++ b/Biene_Maja.html
@@ -2880,7 +2880,7 @@ Glühkäfer.</p>
 verbergen.</p>
 <p>„Ich muß mich in ein Blatt einhüllen,“ erklärte der Elf, „sonst sehen
 die Menschen mich und sie würden erschrecken. Wir Elfen erscheinen den
-Menschen nur in ihren Träumen.“</ins></p>
+Menschen nur in ihren Träumen.“</p>
 <p>„Das ist etwas anderes“, sagte der Glühkäfer. „Mach gütigst Gebrauch
 von mir. Ich werde tun, was ich kann. Wird das große Tier, das du bei
 dir hast, mir nichts zu leide tun?“</p>
