--- a/Robinson_Crusoe.html
+++ b/Robinson_Crusoe.html
@@ -55,7 +55,7 @@ Seeley, Service &amp; Co. Limited<br />
 <li><a href="#Chapter_VIII">Surveys his Position</a></li>
 <li><a href="#Chapter_IX">A Boat</a></li>
 <li><a href="#Chapter_X">Tames Goats</a></li>
-<li><a href="#Chapter_XI">Finds Print of Man’s Foot on the
+<li><a href="#Chapter_XI">Finds Print of Man’s Foot on the Sand</a></li>
 <li><a href="#Chapter_XII">A Cave Retreat</a></li>
 <li><a href="#Chapter_XIII">Wreck of a Spanish Ship</a></li>
 <li><a href="#Chapter_XIV">A Dream Realised</a></li>
@@ -5178,8 +5178,7 @@ in the wilderness, where I saw nothing at first but to perish for
 hunger!</p>
 </section>
 <section id="Chapter_XI">
-<h2>Chapter XI—Finds Print of Man’s Foot on the
-Sand</h2>
+<h2>Chapter XI—Finds Print of Man’s Foot on the Sand</h2>
 <p>It would have made a Stoic smile to have seen me and my little
 family sit down to dinner. There was my majesty the prince
 and lord of the whole island; I had the lives of all my subjects
