--- a/Treasure_Island.html
+++ b/Treasure_Island.html
@@ -46,7 +46,7 @@
 <h1>Treasure Island</h1>
 <h2 class="author">Robert Louis Stevenson</h2>
 <p>in the edition of <a href="http://www.gutenberg.org/etext/120">Project Gutenberg</a>, converted to valid <abbr title="Hypertext Markup Language">HTML</abbr>5 and styled with <abbr title="Cascading Stylesheets">CSS</abbr>&#xA0;3 by Manuel Strehl, 2009.</p>
-</section>
+</header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
 <ol>
