--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <title>eBooks</title>
 </head>
 <body>
-<a href="http://github.com/Boldewyn/ebooks/"><img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" style="border: 0pt none ; position: absolute; top: 0pt; left: 0pt;"></a>
+<a href="http://github.com/Boldewyn/ebooks/"><img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" style="border: 0pt none ; position: absolute; top: 0pt; left: 0pt;" /></a>
 <article class="book">
 <header>
 <h1>eBooks</h1>
