--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
 <h2>Contents</h2>
 <p>What’s in here?</p>
 <ol>
-<li><a href="A_Christmas_Carol.html">A Christmas Carol, <em>by Charles Dickens</em></a></li>
-<li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a></li>
-<li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
-<li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="Biene_Maja.html">Die Biene Maja, <em>by Waldemar Bonsels</em></a> (german)</li>
-<li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
-<li><a href="Frankenstein.html">Frankenstein, <em>by Mary Shelley</em></a></li>
-<li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
-<li><a href="Moby-Dick.html">Moby-Dick, <em>by Herman Melville</em></a></li>
-<li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
-<li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
-<li><a href="Nils_Holgersson.html">Nils Holgersson, <em>by Selma Lagerlöf</em></a> (german)</li>
-<li><a href="Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a></li>
-<li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a> (german)</li>
-<li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
-<li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales, <em>by Oscar Wilde</em></a></li>
-<li><a href="The_Invisible_Man.html">The Invisible Man, <em>by H. G. Wells</em></a></li>
-<li><a href="The_Jungle_Book.html">The Jungle Book, <em>by Rudyard Kipling</em></a></li>
-<li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray, <em>by Oscar Wilde</em></a></li>
-<li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde, <em>by Robert Lewis Stevenson</em></a></li>
-<li><a href="The_Time_Machine.html">The Time Machine, <em>by H. G. Wells</em></a></li>
-<li><a href="The_War_of_the_Worlds.html">The War of the Worlds, <em>by H. G. Wells</em></a></li>
-<li><a href="Treasure_Island.html">Treasure Island, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="A_Christmas_Carol.html">A Christmas Carol, <em>by Charles Dickens</em></a> (<a href="A_Christmas_Carol.pdf">PDF</a>, <a href="A_Christmas_Carol.epub">EPUB</a>)</li>
+<li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a> (<a href="A_Connecticut_Yankee.pdf">PDF</a>, <a href="A_Connecticut_Yankee.epub">EPUB</a>)</li>
+<li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a> (<a href="Alices_Adventures_in_Wonderland.pdf">PDF</a>, <a href="Alices_Adventures_in_Wonderland.epub">EPUB</a>)</li>
+<li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a> (<a href="At_the_Mountains_of_Madness.pdf">PDF</a>, <a href="At_the_Mountains_of_Madness.epub">EPUB</a>)</li>
+<li><a href="Biene_Maja.html">Die Biene Maja, <em>by Waldemar Bonsels</em></a> (german) (<a href="Biene_Maja.pdf">PDF</a>, <a href="Biene_Maja.epub">EPUB</a>)</li>
+<li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a> (<a href="Dracula.pdf">PDF</a>, <a href="Dracula.epub">EPUB</a>)</li>
+<li><a href="Frankenstein.html">Frankenstein, <em>by Mary Shelley</em></a> (<a href="Frankenstein.pdf">PDF</a>, <a href="Frankenstein.epub">EPUB</a>)</li>
+<li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a> (<a href="Gullivers_Travels.pdf">PDF</a>, <a href="Gullivers_Travels.epub">EPUB</a>)</li>
+<li><a href="Moby-Dick.html">Moby-Dick, <em>by Herman Melville</em></a> (<a href="Moby-Dick.pdf">PDF</a>, <a href="Moby-Dick.epub">EPUB</a>)</li>
+<li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a> (<a href="Narrative_of_Arthur_Gordon_Pym.pdf">PDF</a>, <a href="Narrative_of_Arthur_Gordon_Pym.epub">EPUB</a>)</li>
+<li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a> (<a href="New_Arabian_Nights.pdf">PDF</a>, <a href="New_Arabian_Nights.epub">EPUB</a>)</li>
+<li><a href="Nils_Holgersson.html">Nils Holgersson, <em>by Selma Lagerlöf</em></a> (german) (<a href="Nils_Holgersson.pdf">PDF</a>, <a href="Nils_Holgersson.epub">EPUB</a>)</li>
+<li><a href="Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a> (<a href="Robinson_Crusoe.pdf">PDF</a>, <a href="Robinson_Crusoe.epub">EPUB</a>)</li>
+<li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a> (german) (<a href="Siddhartha.pdf">PDF</a>, <a href="Siddhartha.epub">EPUB</a>)</li>
+<li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a> (<a href="The_Adventures_of_Sherlock_Holmes.pdf">PDF</a>, <a href="The_Adventures_of_Sherlock_Holmes.epub">EPUB</a>)</li>
+<li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a> (<a href="The_Call_of_Cthulhu.pdf">PDF</a>, <a href="The_Call_of_Cthulhu.epub">EPUB</a>)</li>
+<li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a> (<a href="The_Case_of_Charles_Dexter_Ward.pdf">PDF</a>, <a href="The_Case_of_Charles_Dexter_Ward.epub">EPUB</a>)</li>
+<li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales, <em>by Oscar Wilde</em></a> (<a href="The_Happy_Prince_and_Other_Tales.pdf">PDF</a>, <a href="The_Happy_Prince_and_Other_Tales.epub">EPUB</a>)</li>
+<li><a href="The_Invisible_Man.html">The Invisible Man, <em>by H. G. Wells</em></a> (<a href="The_Invisible_Man.pdf">PDF</a>, <a href="The_Invisible_Man.epub">EPUB</a>)</li>
+<li><a href="The_Jungle_Book.html">The Jungle Book, <em>by Rudyard Kipling</em></a> (<a href="The_Jungle_Book.pdf">PDF</a>, <a href="The_Jungle_Book.epub">EPUB</a>)</li>
+<li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray, <em>by Oscar Wilde</em></a> (<a href="The_Picture_of_Dorian_Gray.pdf">PDF</a>, <a href="The_Picture_of_Dorian_Gray.epub">EPUB</a>)</li>
+<li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde, <em>by Robert Lewis Stevenson</em></a> (<a href=".pdf">PDF</a>, <a href=".epub">EPUB</a>)</li>
+<li><a href="The_Time_Machine.html">The Time Machine, <em>by H. G. Wells</em></a> (<a href="The_Time_Machine.pdf">PDF</a>, <a href="The_Time_Machine.epub">EPUB</a>)</li>
+<li><a href="The_War_of_the_Worlds.html">The War of the Worlds, <em>by H. G. Wells</em></a> (<a href="The_War_of_the_Worlds.pdf">PDF</a>, <a href="The_War_of_the_Worlds.epub">EPUB</a>)</li>
+<li><a href="Treasure_Island.html">Treasure Island, <em>by Robert Lewis Stevenson</em></a> (<a href="Treasure_Island.pdf">PDF</a>, <a href="Treasure_Island.epub">EPUB</a>)</li>
 </ol>
 </section>
 <section id="Credits">
