fix class name in Dracula

--- a/Dracula.html
+++ b/Dracula.html
@@ -4137,7 +4137,7 @@ further clue. You must not be angry with me, Art, because his very
 reticence means that all his brains are working for her good. He
 will speak plainly enough when the time comes, be sure. So I told
 him I would simply write an account of our visit, just as if I were
-doing a descriptive special article for <span class="proper-name">The Daily Telegraph</span>. He
+doing a descriptive special article for <span class="proper_name">The Daily Telegraph</span>. He
 seemed not to notice, but remarked that the smuts of London were not
 quite so bad as they used to be when he was a student here. I am to
 get his report tomorrow if he can possibly make it. In any case I
@@ -4912,7 +4912,7 @@ angrily against the window panes.</p>
 <p class="article_header">The Escaped Wolf Perilous Adventure of our Interviewer</p>
 <p class="article_header">Interview with the Keeper in the Zoological Gardens</p>
 <p>After many inquiries and almost as many refusals, and perpetually
-using the words ‘<span class="proper-name">Pall Mall Gazette</span>’ as a sort of talisman, I managed
+using the words ‘<span class="proper_name">Pall Mall Gazette</span>’ as a sort of talisman, I managed
 to find the keeper of the section of the Zoological Gardens in which
 the wolf department is included. Thomas Bilder lives in one of the
 cottages in the enclosure behind the elephant house, and was just
