--- a/index.de.html
+++ b/index.de.html
@@ -55,6 +55,7 @@
 <li><a href="Robinson_Crusoe.html">Robinson Crusoe <em>von Daniel Dafoe</em></a> (englisch) (<a href="Robinson_Crusoe.pdf">PDF</a>, <a href="Robinson_Crusoe.epub">EPUB</a>)</li>
 <li><a href="Siddhartha.html">Siddhartha <em>von Hermann Hesse</em></a> (<a href="Siddhartha.pdf">PDF</a>, <a href="Siddhartha.epub">EPUB</a>)</li>
 <li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes <em>von Sir Arthur Conan Doyle</em></a> (englisch) (<a href="The_Adventures_of_Sherlock_Holmes.pdf">PDF</a>, <a href="The_Adventures_of_Sherlock_Holmes.epub">EPUB</a>)</li>
+<li><a href="The_Book_of_Tea.html">The Book of Tea <em>von Kakuzō Okakura</em></a> (englisch) (<a href="The_Book_of_tea.pdf">PDF</a>, <a href="The_Book_of_tea.epub">EPUB</a>)</li>
 <li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu <em>von H. P. Lovecraft</em></a> (englisch) (<a href="The_Call_of_Cthulhu.pdf">PDF</a>, <a href="The_Call_of_Cthulhu.epub">EPUB</a>)</li>
 <li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward <em>von H. P. Lovecraft</em></a> (englisch) (<a href="The_Case_of_Charles_Dexter_Ward.pdf">PDF</a>, <a href="The_Case_of_Charles_Dexter_Ward.epub">EPUB</a>)</li>
 <li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales <em>von Oscar Wilde</em></a> (englisch) (<a href="The_Happy_Prince_and_Other_Tales.pdf">PDF</a>, <a href="The_Happy_Prince_and_Other_Tales.epub">EPUB</a>)</li>
