--- a/Moby-Dick.html
+++ b/Moby-Dick.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
   <head>
     <meta charset="utf-8" />
