--- a/Nils_Holgersson.html
+++ b/Nils_Holgersson.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de-DE" lang="de-DE">
   <head>
     <meta charset="utf-8" />
