--- a/Siddhartha.html
+++ b/Siddhartha.html
@@ -69,9 +69,7 @@
 </section>
 <section id="Erster_Teil">
 <h2>Erster Teil</h2>
-<p class="dedication">
-Romain Rolland dem verehrten Freunde gewidmet
-</p>
+<p class="dedication">Romain Rolland dem verehrten Freunde gewidmet</p>
 <section id="Der_Sohn_des_Brahmanen">
 <h3>Der Sohn des Brahmanen</h3>
 <p>Im Schatten des Hauses, in der Sonne des Flußufers Booten, im Schatten des Salwaldes, im Schatten des Feigenbaumes wuchs Siddhartha auf, der schöne Brahmanen, der junge Falke, zusammen mit seinem Freunde, dem Brahmanensohn. Sonne bräunte seine lichten Schultern am Flußufer, beim Bade, bei den heiligen Waschungen, bei den heiligen Opfern. Schatten floß in seine schwarzen Augen im Mangohain, bei den Knabenspielen, beim Gesang der Mutter, bei den heiligen Opfern, bei den Lehren seines Vaters, des Gelehrten, beim Gespräch der Weisen. Lange schon nahm Siddhartha am Gespräch der Weisen teil, übte sich mit Govinda im Redekampf, übte sich mit Govinda in der Kunst der Betrachtung, im Dienst der Versenkung. Schon verstand er, lautlos das Om zu sprechen, das Wort der Worte, es lautlos in sich hinein zu sprechen mit dem Einhauch, es lautlos aus sich heraus zu sprechen mit dem Aushauch, mit gesammelter Seele, die Stirn umgeben--vom Glanz des klardenkenden Geistes. Schon verstand er, im Innern seines Wesens Atman zu wissen, unzerstörbar, eins mit dem Weltall.</p>
