add script to Moby Dick

--- a/Moby-Dick.html
+++ b/Moby-Dick.html
@@ -19111,5 +19111,6 @@ her retracing search after her missing children, only found another
 orphan.</p>
 </section>
 </article>
+<script src="static/ebook.js"></script>
 </body>
 </html>
