refine styles and move indentation logic to HTML

--- a/Dracula.html
+++ b/Dracula.html
@@ -1997,8 +1997,8 @@ of a tall, handsome, curly-haired man???</p>
 <h3>Letter, Lucy Westenra to Mina Murray</h3>
 <p class="letter_header">17, Chatham Street<br/>
 Wednesday</p>
-<p>My dearest Mina,</p>
-<p>I must say you tax me very unfairly with being a bad correspondent.
+<p class="noindent">My dearest Mina,<br>
+I must say you tax me very unfairly with being a bad correspondent.
 I wrote you twice since we parted, and your last letter was only
 your second. Besides, I have nothing to tell you. There is really
 nothing to interest you.</p>
@@ -2050,8 +2050,8 @@ Goodnight again. L.</p>
 <hr/>
 <h3>Letter, Lucy Westenra to Mina Murray</h3>
 <p class="letter_header">24 May</p>
-<p>My dearest Mina,</p>
-<p>Thanks, and thanks, and thanks again for your sweet letter. It
+<p class="noindent">My dearest Mina,<br>
+Thanks, and thanks, and thanks again for your sweet letter. It
 was so nice to be able to tell you and to have your sympathy.</p>
 <p>My dear, it never rains but it pours. How true the old proverbs
 are. Here am I, who shall be twenty in September, and yet I never
@@ -2243,8 +2243,8 @@ paramount, and only accident or a series of accidents can balance it.</p>
 <hr/>
 <h3>Letter, Quincey P. Morris to Hon. Arthur Holmood</h3>
 <p class="letter_header">25 May.</p>
-<p>My dear Art,</p>
-<p>We’ve told yarns by the campfire in the prairies, and dressed one
+<p class="noindent">My dear Art,<br>
+We’ve told yarns by the campfire in the prairies, and dressed one
 another’s wounds after trying a landing at the Marquesas, and drunk
 healths on the shore of Titicaca. There are more yarns to be told,
 and other wounds to be healed, and another health to be drunk.
@@ -2264,7 +2264,7 @@ Quincey P. Morris</p>
 <hr/>
 <h3>Telegram from Arthur Holmwood to Quincey P. Morris</h3>
 <p class="letter_header">26 May</p>
-<p>Count me in every time. I bear messages which will make both
+<p class="noindent">Count me in every time. I bear messages which will make both
 your ears tingle.</p>
 <p class="signature">Art</p>
 </section>
@@ -3518,7 +3518,7 @@ within a day or two, I shall insist on the doctor seeing about them.</p>
 <h3>Letter, Samuel F. Billington &amp; Son, Solicitors Whitby,
 to Messrs. Carter, Paterson &amp; Co., London.</h3>
 <p class="letter_header">17 August</p>
-<p>“Dear Sirs,—Herewith please receive invoice of goods sent by Great
+<p class="noindent">“Dear Sirs,—Herewith please receive invoice of goods sent by Great
 Northern Railway. Same are to be delivered at Carfax, near
 Purfleet, immediately on receipt at goods station King’s Cross. The
 house is at present empty, but enclosed please find keys, all of
@@ -3549,7 +3549,7 @@ Samuel F. Billington &amp; Son”</p>
 <h3>Letter, Messrs. Carter, Paterson &amp; Co., London,
 to Messrs. Billington &amp; Son, Whitby.</h3>
 <p class="letter_header">21 August.</p>
-<p>“Dear Sirs,—We beg to acknowledge 10 pounds received and to return
+<p class="noindent">“Dear Sirs,—We beg to acknowledge 10 pounds received and to return
 cheque of 1 pound, 17s, 9d, amount of overplus, as shown in
 receipted account herewith. Goods are delivered in exact accordance
 with instructions, and keys left in parcel in main hall, as
@@ -3621,7 +3621,7 @@ he has seen and touched must comfort me till we meet.</p>
 <h3>Letter, Sister Agatha, Hospital of St. Joseph and
 Ste. Mary Buda-Pesth, to Miss Willhelmina Murray</h3>
 <p class="letter_header">12 August,</p>
-<p>“Dear Madam.</p>
+<p class="noindent">“Dear Madam.</p>
 <p>“I write by desire of Mr. Jonathan Harker, who is himself not strong
 enough to write, though progressing well, thanks to God and St.
 Joseph and Ste. Mary. He has been under our care for nearly six
@@ -3774,7 +3774,7 @@ diary has quieted me, and I feel I shall get some sleep tonight.</p>
 <h2>Chapter 9</h2>
 <h3>Letter, Mina Harker to Lucy Westenra</h3>
 <p class="letter_header">Buda-Pesth, 24 August.</p>
-<p>“My dearest Lucy,</p>
+<p class="noindent">“My dearest Lucy,</p>
 <p>“I know you will be anxious to hear all that has happened
 since we parted at the railway station at Whitby.</p>
 <p>“Well, my dear, I got to Hull all right, and caught the boat to
@@ -3883,7 +3883,7 @@ Mina Harker.”</p>
 <hr/>
 <h3>Letter, Lucy Westenra to Mina Harker.</h3>
 <p class="letter_header">Whitby, 30 August.</p>
-<p>“My dearest Mina,</p>
+<p class="noindent">“My dearest Mina,</p>
 <p>“Oceans of love and millions of kisses, and may you soon be in your
 own home with your husband. I wish you were coming home soon enough
 to stay with us here. The strong air would soon restore Jonathan.
@@ -3996,7 +3996,7 @@ Arthur comes, or else I know he will be miserable to see me so.</p>
 <hr/>
 <h3>Letter, Arthur to Dr. Seward</h3>
 <p class="letter_header">“Albemarle Hotel, 31 August</p>
-<p>“My dear Jack,</p>
+<p class="noindent">“My dear Jack,</p>
 <p>“I want you to do me a favour. Lucy is ill, that is she has no
 special disease, but she looks awful, and is getting worse every
 day. I have asked her if there is any cause, I not dare to ask her
@@ -4023,7 +4023,7 @@ me fully by tonight’s post to Ring. Wire me if necessary.”</p>
 <hr/>
 <h3>Letter from Dr. Seward to Arthur Holmwood</h3>
 <p class="letter_header">2 September</p>
-<p>“My dear old fellow,</p>
+<p class="noindent">“My dear old fellow,</p>
 <p>“With regard to Miss Westenra’s health I hasten to let you know at
 once that in my opinion there is not any functional disturbance or
 any malady that I know of. At the same time, I am not by any means
@@ -4101,7 +4101,7 @@ repetition of my call.</p>
 <hr/>
 <h3>Letter, Abraham van Helsing, MD, DPh, D. Lit, etc, etc, to Dr. Seward</h3>
 <p class="letter_header">2 September.</p>
-<p>“My good Friend,</p>
+<p class="noindent">“My good Friend,</p>
 <p>“When I received your letter I am already coming to you. By good
 fortune I can leave just at once, without wrong to any of those who
 have trusted me. Were fortune other, then it were bad for those who
@@ -4120,7 +4120,7 @@ then goodbye, my friend John.</p>
 <hr/>
 <h3>Letter, Dr. Seward to Hon. Arthur Holmwood</h3>
 <p class="letter_header">3 September</p>
-<p>“My dear Art,</p>
+<p class="noindent">“My dear Art,</p>
 <p>“Van Helsing has come and gone. He came on with me to Hillingham,
 and found that, by Lucy’s discretion, her mother was lunching out,
 so that we were alone with her.</p>
@@ -4282,7 +4282,7 @@ have seen you.”</p>
 <h2>Chapter 10</h2>
 <h3>Letter, Dr. Seward to Hon. Arthur Holmwood</h3>
 <p class="letter_header">6 September</p>
-<p>“My dear Art,</p>
+<p class="noindent">“My dear Art,</p>
 <p>“My news today is not so good. Lucy this morning had gone back a
 bit. There is, however, one good thing which has arisen from it.
 Mrs. Westenra was naturally anxious concerning Lucy, and has
@@ -4912,7 +4912,7 @@ angrily against the window panes.</p>
 <h3>The Pall Mall Gazette 18 September.</h3>
 <p class="article_header">The Escaped Wolf Perilous Adventure of our Interviewer</p>
 <p class="article_header">Interview with the Keeper in the Zoological Gardens</p>
-<p>After many inquiries and almost as many refusals, and perpetually
+<p class="noindent">After many inquiries and almost as many refusals, and perpetually
 using the words ‘<span class="proper_name">Pall Mall Gazette</span>’ as a sort of talisman, I managed
 to find the keeper of the section of the Zoological Gardens in which
 the wolf department is included. Thomas Bilder lives in one of the
@@ -5558,7 +5558,7 @@ great. The poor child cannot rally. God help us all.</p>
 <h3>Letter Mina Harker to Lucy Westenra</h3>
 <p>(Unopened by her)</p>
 <p class="letter_header">17 September</p>
-<p>My dearest Lucy,</p>
+<p class="noindent">My dearest Lucy,</p>
 <p>“It seems an age since I heard from you, or indeed since I
 wrote. You will pardon me, I know, for all my faults when
 you have read all my budget of news. Well, I got my husband back
@@ -5611,7 +5611,7 @@ Goodbye, my dearest Lucy, and blessings on you.</p>
 <h3>Report from Patrick Hennessey, MD, MRCSLK, QCPI, etc, etc,
 to John Seward, MD</h3>
 <p class="letter_header">20 September</p>
-<p>My dear Sir:</p>
+<p class="noindent">My dear Sir:</p>
 <p>“In accordance with your wishes, I enclose report of the
 conditions of everything left in my charge. With regard to
 patient, Renfield, there is more to say. He has had another
@@ -5702,7 +5702,7 @@ shall wire you at once if there is anything of importance.</p>
 <h3>Letter, Mina Harker to Lucy Westenra</h3>
 <p>(Unopened by her)</p>
 <p class="letter_header">18 September</p>
-<p>“My dearest Lucy,</p>
+<p class="noindent">“My dearest Lucy,</p>
 <p>“Such a sad blow has befallen us. Mr. Hawkins has died very
 suddenly. Some may not think it so sad for us, but we had
 both come to so love him that it really seems as though we
@@ -6429,7 +6429,7 @@ may be about.</p>
 <p class="article_header">The Hampstead Horror</p>
 <p class="article_header">Another Child Injured</p>
 <p class="article_header">The “Bloofer Lady”</p>
-<p>We have just received intelligence that another child,
+<p class="noindent">We have just received intelligence that another child,
 missed last night, was only discovered late in the morning
 under a furze bush at the Shooter’s Hill side of Hampstead
 Heath, which is perhaps, less frequented than the other
@@ -6477,7 +6477,7 @@ him questions and find out things, and see how I may comfort him.</p>
 <h3>Letter, van Helsing to Mrs. Harker</h3>
 <p class="letter_header">24 September</p>
 <p class="letter_header">(Confidence)</p>
-<p>“Dear Madam,</p>
+<p class="noindent">“Dear Madam,</p>
 <p>“I pray you to pardon my writing, in that I am so far
 friend as that I sent to you sad news of Miss Lucy
 Westenra’s death. By the kindness of Lord Godalming, I am
@@ -6727,7 +6727,7 @@ thinking I don’t know what.</p>
 <hr/>
 <h3>Letter (by hand), van Helsing to Mrs. Harker</h3>
 <p class="letter_header">25 September, 6 o’clock</p>
-<p>“Dear Madam Mina,</p>
+<p class="noindent">“Dear Madam Mina,</p>
 <p>“I have read your husband’s so wonderful diary. You may
 sleep without doubt. Strange and terrible as it is, it is
 true! I will pledge my life on it. It may be worse for
@@ -6745,7 +6745,7 @@ dazzled more than ever, and I must think.</p>
 <hr/>
 <h3>Letter, Mrs. Harker to van Helsing</h3>
 <p class="letter_header">25 September, 6:30 P.M.</p>
-<p>“My dear Dr. Van Helsing,</p>
+<p class="noindent">“My dear Dr. Van Helsing,</p>
 <p>“A thousand thanks for your kind letter, which has taken a
 great weight off my mind. And yet, if it be true, what
 terrible things there are in the world, and what an awful
@@ -7311,7 +7311,7 @@ Piccadilly.</p>
 <h3>Note Left by van Helsing in his Portmanteau, Berkeley Hotel Directed to
 John Seward, M. D. (Not Delivered)</h3>
 <p class="letter_header">27 September</p>
-<p>“Friend John,</p>
+<p class="noindent">“Friend John,</p>
 <p>“I write this in case anything should happen. I go alone to
 watch in that churchyard. It pleases me that the UnDead,
 Miss Lucy, shall not leave tonight, that so on the morrow
@@ -9816,7 +9816,7 @@ ignorant as we went in.</p>
 <hr/>
 <h3>Letter, Mitchell, Sons &amp; Candy to Lord Godalming.</h3>
 <p class="letter_header">“1 October.</p>
-<p>“My Lord,</p>
+<p class="noindent">“My Lord,</p>
 <p>“We are at all times only too happy to meet your wishes. We beg,
 with regard to the desire of your Lordship, expressed by Mr.
 Harker on your behalf, to supply the following information
