--- a/Frankenstein.html
+++ b/Frankenstein.html
@@ -77,7 +77,7 @@
 <p class="letter_header">
 St. Petersburgh, Dec. 11th, 17—<br/>
 To Mrs. Saville, England</p>
-<p>You will rejoice to hear that no disaster has accompanied the
+<p class="noindent">You will rejoice to hear that no disaster has accompanied the
 commencement of an enterprise which you have regarded with such evil
 forebodings. I arrived here yesterday, and my first task is to assure
 my dear sister of my welfare and increasing confidence in the success
@@ -187,7 +187,7 @@ R. Walton</p>
 <p class="letter_header">
 Archangel, 28th March, 17—<br/>
 To Mrs. Saville, England</p>
-<p>How slowly the time passes here, encompassed as I am by frost and snow!
+<p class="noindent">How slowly the time passes here, encompassed as I am by frost and snow!
 Yet a second step is taken towards my enterprise. I have hired a
 vessel and am occupied in collecting my sailors; those whom I have
 already engaged appear to be men on whom I can depend and are certainly
@@ -305,8 +305,8 @@ Robert Walton</p>
 July 7th, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">
-My dear Sister,</p>
-<p>I write a few lines in haste to say that I am safe—and well advanced
+My dear Sister,<br>
+I write a few lines in haste to say that I am safe—and well advanced
 on my voyage. This letter will reach England by a merchantman now on
 its homeward voyage from Archangel; more fortunate than I, who may not
 see my native land, perhaps, for many years. I am, however, in good
@@ -340,7 +340,7 @@ R.W.</p>
 <p class="letter_header">
 August 5th, 17—<br/>
 To Mrs. Saville, England</p>
-<p>So strange an accident has happened to us that I cannot forbear
+<p class="noindent">So strange an accident has happened to us that I cannot forbear
 recording it, although it is very probable that you will see me before
 these papers can come into your possession.</p>
 <p>Last Monday (July 31st) we were nearly surrounded by ice, which closed
@@ -458,7 +458,7 @@ have been happy to have possessed as the brother of my heart.</p>
 should I have any fresh incidents to record.</p>
 <p class="separation letter_header">
 August 13th, 17—</p>
-<p>My affection for my guest increases every day. He excites at once my
+<p class="noindent">My affection for my guest increases every day. He excites at once my
 admiration and my pity to an astonishing degree. How can I see so
 noble a creature destroyed by misery without feeling the most poignant
 grief? He is so gentle, yet so wise; his mind is so cultivated, and
@@ -528,7 +528,7 @@ for clearness and precision; add to this a facility of expression and a
 voice whose varied intonations are soul-subduing music.</p>
 <p class="separation letter_header">
 August 19, 17—</p>
-<p>Yesterday the stranger said to me, “You may easily perceive, Captain
+<p class="noindent">Yesterday the stranger said to me, “You may easily perceive, Captain
 Walton, that I have suffered great and unparalleled misfortunes. I had
 determined at one time that the memory of these evils should die with
 me, but you have won me to alter my determination. You seek for
