--- a/The_Adventures_of_Sherlock_Holmes.html
+++ b/The_Adventures_of_Sherlock_Holmes.html
@@ -9470,7 +9470,7 @@ when I received this letter from the gentleman himself. I have it
 here and I will read it to you:</p>
 <blockquote class="letter">
 <p class="letter_header">“ ‘The Copper Beeches, near Winchester.</p>
-<p>“ ‘DEAR MISS HUNTER:—Miss Stoper has very kindly given me your
+<p class="noindent">“ ‘DEAR MISS HUNTER:—Miss Stoper has very kindly given me your
 address, and I write from here to ask you whether you have
 reconsidered your decision. My wife is very anxious that you
 should come, for she has been much attracted by my description of
