--- a/Treasure_Island.html
+++ b/Treasure_Island.html
@@ -1229,10 +1229,10 @@ anything but print—the following important news:</p>
 <blockquote class="letter">
 <p class="letter_header">
 Old Anchor Inn, Bristol, March 1, 17—</p>
-<p>Dear Livesey—As I do not know whether you
+<p class="noindent">Dear Livesey—As I do not know whether you
 are at the hall or still in London, I send this in
 double to both places.</p>
-<p>The ship is bought and fitted.  She lies at
+<p class="noindent">The ship is bought and fitted.  She lies at
 anchor, ready for sea.  You never imagined a
 sweeter schooner—a child might sail her—two
 hundred tons; name, <span class="proper_name">Hispaniola</span>.</p>
