--- a/Gullivers_Travels.html
+++ b/Gullivers_Travels.html
@@ -92,7 +92,7 @@ book.</p>
 <section class="preface">
 <h2>A Letter from Captain Gulliver to his Cousin Sympson.</h2>
 <p class="letter_header">Written in the Year 1727.</p>
-<p>I hope you will be ready to own publicly, whenever you shall
+<p class="noindent">I hope you will be ready to own publicly, whenever you shall
 be called to it, that by your great and frequent urgency you
 prevailed on me to publish a very loose and uncorrect account of
 my travels, with directions to hire some young gentleman of
@@ -2042,7 +2042,7 @@ articles; wherein I venture my head for your service.</p>
 against</em> <strong class="proper_name">Quinbus Flestrin</strong>,
 (<em>the Man-Mountain</em>.)</p>
 <p class="letter_header">Article I.</p>
-<p>“‘Whereas, by a statute made in the reign of his
+<p class="noindent">“‘Whereas, by a statute made in the reign of his
 imperial majesty Calin Deffar Plune, it is enacted, that, whoever
 shall make water within the precincts of the royal palace, shall
 be liable to the pains and penalties of high-treason;
@@ -2055,7 +2055,7 @@ and being within the precincts of the said royal palace, against
 the statute in that case provided, etc. against the duty,
 etc.</p>
 <p class="letter_header">Article II.</p>
-<p>“‘That the said Quinbus Flestrin, having brought
+<p class="noindent">“‘That the said Quinbus Flestrin, having brought
 the imperial fleet of Blefuscu into the royal port, and being
 afterwards commanded by his imperial majesty to seize all the
 other ships of the said empire of Blefuscu, and reduce that
@@ -2068,7 +2068,7 @@ imperial majesty, did petition to be excused from the said
 service, upon pretence of unwillingness to force the consciences,
 or destroy the liberties and lives of an innocent people.</p>
 <p class="letter_header">Article III.</p>
-<p>“‘That, whereas certain ambassadors arrived from
+<p class="noindent">“‘That, whereas certain ambassadors arrived from
 the Court of Blefuscu, to sue for peace in his majesty’s
 court, he, the said Flestrin, did, like a false traitor, aid,
 abet, comfort, and divert, the said ambassadors, although he knew
@@ -2076,7 +2076,7 @@ them to be servants to a prince who was lately an open enemy to
 his imperial majesty, and in an open war against his said
 majesty.</p>
 <p class="letter_header">Article IV.</p>
-<p>“‘That the said Quinbus Flestrin, contrary to the
+<p class="noindent">“‘That the said Quinbus Flestrin, contrary to the
 duty of a faithful subject, is now preparing to make a voyage to
 the court and empire of Blefuscu, for which he has received only
 verbal license from his imperial majesty; and, under colour of
